--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/GAA.xaml
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/GAA.xaml
@@ -28,7 +28,7 @@
 
         <Image x:Name="imgSound" Grid.Row="0" Grid.Column="5" Grid.ColumnSpan="2">
             <Image.GestureRecognizers>
-                <TapGestureRecognizer Tapped="imgSound_Tapped" NumberOfTapsRequired="2"></TapGestureRecognizer>
+                <TapGestureRecognizer Tapped="ImgSound_Tapped" NumberOfTapsRequired="2"></TapGestureRecognizer>
             </Image.GestureRecognizers>
         </Image>
 
