--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/IceHockey.xaml
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/IceHockey.xaml
@@ -26,11 +26,11 @@
 
         <Image x:Name="imgSound" Grid.Row="0" Grid.Column="4">
             <Image.GestureRecognizers>
-                <TapGestureRecognizer Tapped="imgSound_Tapped" NumberOfTapsRequired="2"></TapGestureRecognizer>
+                <TapGestureRecognizer Tapped="ImgSound_Tapped" NumberOfTapsRequired="2"></TapGestureRecognizer>
             </Image.GestureRecognizers>
         </Image>
 
-        <Label x:Name="gameType" Text="Ice Hockey" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" />
+        <Label x:Name="gameType" Text="Ice Hockey" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3"/>
         <Label x:Name="homeTeam" Text="Home" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="1"/>
         <Label Text="-" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="2"/>
         <Label x:Name="awayTeam" Text="Away" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="3"/>
