--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/GAA.xaml
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/GAA.xaml
@@ -32,6 +32,12 @@
             </Image.GestureRecognizers>
         </Image>
 
+        <Image x:Name="imgReset" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+            <Image.GestureRecognizers>
+                <TapGestureRecognizer Tapped="ImgReset_Tapped" NumberOfTapsRequired="2"></TapGestureRecognizer>
+            </Image.GestureRecognizers>
+        </Image>
+
         <Label x:Name="gameType" Text="GAA" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="3"/>
         <Label x:Name="homeTeam" Text="Home" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="2"/>
         <Label Text="-" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="3"/>
