--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/Soccer.xaml
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/Soccer.xaml
@@ -33,6 +33,9 @@
         <Image x:Name="imgReset" Grid.Row="0" Grid.Column="0">
             <Image.GestureRecognizers>
                 <TapGestureRecognizer Tapped="ImgReset_Tapped" NumberOfTapsRequired="2"></TapGestureRecognizer>
+            </Image.GestureRecognizers>
+        </Image>
+
         <Label x:Name="gameType" Text="Soccer" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3"/>
         <Label x:Name="homeTeam" Text="Home" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="1"/>
         <Label x:Name="dash" Text="-" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="2"/>
