--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/GAA.xaml
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/GAA.xaml
@@ -5,7 +5,7 @@
     
     <Grid BackgroundColor="DodgerBlue">
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
+            <RowDefinition Height="0.5*"/>
             <RowDefinition Height="0.5*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="0.5*"/>
@@ -24,35 +24,35 @@
             <ColumnDefinition Width="0.25*"/>
         </Grid.ColumnDefinitions>
 
-        <Image x:Name="imgBackground" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="7" Grid.RowSpan="8" Aspect="AspectFill"/>
+        <Image x:Name="ImgBackground" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="7" Grid.RowSpan="8" Aspect="AspectFill"/>
 
-        <Image x:Name="imgSound" Grid.Row="0" Grid.Column="5" Grid.ColumnSpan="2">
+        <Image x:Name="ImgSound" Grid.Row="0" Grid.Column="5" Grid.ColumnSpan="2">
             <Image.GestureRecognizers>
                 <TapGestureRecognizer Tapped="ImgSound_Tapped" NumberOfTapsRequired="2"></TapGestureRecognizer>
             </Image.GestureRecognizers>
         </Image>
 
-        <Image x:Name="imgReset" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+        <Image x:Name="ImgReset" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
             <Image.GestureRecognizers>
                 <TapGestureRecognizer Tapped="ImgReset_Tapped" NumberOfTapsRequired="2"></TapGestureRecognizer>
             </Image.GestureRecognizers>
         </Image>
 
-        <Label x:Name="gameType" Text="GAA" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="3"/>
-        <Label x:Name="homeTeam" Text="Home" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="2"/>
+        <Label x:Name="GameTypelbl" Text="GAA" FontSize="50" TextColor="Black" HorizontalOptions="Center" Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="3"/>
+        <Label x:Name="HomeTeamlbl" Text="Home" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="2"/>
         <Label Text="-" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="3"/>
-        <Label x:Name="awayTeam" Text="Away" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="4"/>
+        <Label x:Name="AwayTeamlbl" Text="Away" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="4"/>
         <Frame Grid.Row="2" Grid.Column="1" BorderColor="Black" HorizontalOptions="Center">
-            <Label x:Name="homeGoals" Text="0" FontSize="30" TextColor="Black" HorizontalOptions="Center"/>
+            <Label x:Name="HomeGoalslbl" Text="0" FontSize="30" TextColor="Black" HorizontalOptions="Center"/>
         </Frame>
         <Frame Grid.Row="2" Grid.Column="2" BorderColor="Black" HorizontalOptions="Center">
-            <Label x:Name="homePoints" Text="0" FontSize="30" TextColor="Black" HorizontalOptions="Center"/>
+            <Label x:Name="HomePointslbl" Text="0" FontSize="30" TextColor="Black" HorizontalOptions="Center"/>
         </Frame>
         <Frame Grid.Row="2" Grid.Column="4" BorderColor="Black" HorizontalOptions="Center">
-            <Label x:Name="awayGoals" Text="0" FontSize="30" TextColor="Black" HorizontalOptions="Center"/>
+            <Label x:Name="AwayGoalslbl" Text="0" FontSize="30" TextColor="Black" HorizontalOptions="Center"/>
         </Frame>
         <Frame Grid.Row="2" Grid.Column="5" BorderColor="Black" HorizontalOptions="Center">
-            <Label x:Name="awayPoints" Text="0" FontSize="30" TextColor="Black" HorizontalOptions="Center"/>
+            <Label x:Name="AwayPointslbl" Text="0" FontSize="30" TextColor="Black" HorizontalOptions="Center"/>
         </Frame>
 
         <Button x:Name="AddHome1Goal" Text="+" BackgroundColor="LightGray" HorizontalOptions="Center" Grid.Row="3" FontSize="20" Grid.Column="1" WidthRequest="40" Clicked="AddHome1Goal_Clicked"/>
@@ -60,7 +60,7 @@
         <Button x:Name="AddAway1Goal" Text="+" BackgroundColor="LightGray" HorizontalOptions="Center" Grid.Row="3" FontSize="20" Grid.Column="4" WidthRequest="40" Clicked="AddAway1Goal_Clicked"/>
         <Button x:Name="AddAway1Point" Text="+" BackgroundColor="LightGray" HorizontalOptions="Center" Grid.Row="3" FontSize="20" Grid.Column="5" WidthRequest="40" Clicked="AddAway1Point_Clicked"/>
 
-        <Entry x:Name="matchName" Placeholder="Match Name" Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
-        <Button x:Name="SaveGame" Text="Save Game" BackgroundColor="LightGray" HorizontalOptions="Center" FontSize="10" Grid.Row="6" Grid.Column="3" Clicked="SaveGame_Clicked"/>
+        <Entry x:Name="MatchNamelbl" Placeholder="Match Name" Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
+        <Button x:Name="SaveGamelbl" Text="Save Game" BackgroundColor="LightGray" HorizontalOptions="Center" FontSize="10" Grid.Row="6" Grid.Column="3" Clicked="SaveGame_Clicked"/>
     </Grid>
 </ContentPage>
