--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/Rugby.xaml
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/Rugby.xaml
@@ -16,9 +16,9 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="1.5*"/>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="3*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
@@ -56,6 +56,6 @@
         <Button x:Name="AddAwayGoalKick" Text="+3" BackgroundColor="LightGray" HorizontalOptions="End" Grid.Row="3" FontSize="12" Grid.Column="3" WidthRequest="40" HeightRequest="40" VerticalOptions="Center" Clicked="AddAwayGoalKick_Clicked"/>
 
         <Entry x:Name="MatchNamelbl" Placeholder="Match Name" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="3"/>
-        <Button x:Name="SaveGamelbl" Text="Save Game" BackgroundColor="LightGray" HorizontalOptions="Center" Grid.Row="6" Grid.Column="2" Clicked="SaveGame_Clicked"/>
+        <Button x:Name="SaveGamelbl" Text="Save Game" BackgroundColor="LightGray" HorizontalOptions="Center" Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="3" Clicked="SaveGame_Clicked"/>
     </Grid>
 </ContentPage>
